# laketower

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  tasks.py
.github/workflows/: ci-cd.yml
demo/: generate_iceberg.py  laketower.yml
demo/sample_table/: part-00001-1a31a393-6db6-4d1a-bf4e-81ea061ff8cd-c000.snappy.parquet  part-00001-5af77102-9207-4c89-aaf6-37e1f815ec26-c000.snappy.parquet  part-00001-b11bab55-43d0-4d05-ae88-5b9481ae57db-c000.snappy.parquet
demo/weather/: part-00001-2323b963-be56-44e0-8c10-e237e7e6d4b9-c000.snappy.parquet  part-00001-6360cbf8-f8a9-475f-8729-6f20b4ca64a9-c000.snappy.parquet
laketower/: __main__.py  cli.py  config.py  tables.py  web.py
laketower/static/: datatables.bundle.js  datatables.js  editor.bundle.js
laketower/templates/: _base.html  index.html
laketower/templates/queries/: _results.html  _results_fallback.html  view.html
laketower/templates/tables/: _macros.html  _results.html  _results_fallback.html  history.html  import.html  index.html  query.html  view.html
tests/: conftest.py  test_cli.py  test_config.py  test_tables.py  test_web.py
