[project]
name = "laketower"
description = "Oversee your lakehouse"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "deltalake",
    "duckdb",
    "pandas",
    "pyarrow<19", # see: https://github.com/apache/arrow/issues/45283
    "pydantic",
    "pyyaml",
    "rich",
    "sqlglot",
]
keywords = ["data", "lakehouse", "sql", "delta-lake"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/datalpia/laketower"
Issues = "https://github.com/datalpia/laketower/issues"
Changelog = "https://github.com/datalpia/laketower/blob/master/CHANGELOG.md"

[project.scripts]
laketower = "laketower:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit",
    "invoke",
    "mypy",
    "pandas-stubs",
    "pip-audit",
    "pyarrow-stubs",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-pyyaml",
    "watchdog",
]

[tool.hatch.version]
path = "laketower/__about__.py"
