[project]
name = "laketower"
description = "Oversee your lakehouse"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "deltalake",
    "duckdb",
    "fastapi",
    "jinja2>=3",
    "pandas",
    "pyarrow!=19.0.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml",
    "rich",
    "sqlglot",
    "uvicorn",
]
keywords = ["data", "lakehouse", "sql", "delta-lake"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/datalpia/laketower"
Issues = "https://github.com/datalpia/laketower/issues"
Changelog = "https://github.com/datalpia/laketower/blob/master/CHANGELOG.md"

[project.scripts]
laketower = "laketower:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit",
    "httpx",
    "invoke",
    "mypy",
    "pandas-stubs",
    "pip-audit",
    "pyarrow-stubs",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-pyyaml",
    "watchdog",
]

[tool.hatch.version]
path = "laketower/__about__.py"
